--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -157,6 +157,15 @@
   background-color: #fff;
 }
 
+@media all and (max-width: 375px) {
+  .post-form {
+    position: fixed;
+    height: 290px;
+    bottom: -290px;
+    padding: 0;
+  }
+}
+
 .post-form-bar {
   border: solid 2px #ccc;
   margin: 8px 8px -10px 8px;
@@ -164,9 +173,83 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@media all and (max-width: 375px) {
+  .post-form-bar {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .post-form-bar .post-form-bar-items {
+    margin: 8px;
+  }
+  .post-form-bar .post-form-bar-items input[type="file"] {
+    width: 100%;
+  }
+  .post-form-bar .post-form-bar-items .send-button {
+    width: 100%;
+  }
+}
+
+.bottom-up {
+  -webkit-animation: bottomup 1s;
+          animation: bottomup 1s;
+  bottom: 0;
+}
+
+@-webkit-keyframes bottomup {
+  0% {
+    -webkit-transform: translateY(290px);
+            transform: translateY(290px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes bottomup {
+  0% {
+    -webkit-transform: translateY(290px);
+            transform: translateY(290px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+.bottom-down {
+  -webkit-animation: bottomdown 1s;
+          animation: bottomdown 1s;
+  bottom: -290px;
+}
+
+@-webkit-keyframes bottomdown {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  100% {
+    -webkit-transform: translateY(-290px);
+            transform: translateY(-290px);
+  }
+}
+
+@keyframes bottomdown {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  100% {
+    -webkit-transform: translateY(-290px);
+            transform: translateY(-290px);
+  }
 }
 
 .post-form-bar .send-button {
@@ -254,6 +337,12 @@
   border-radius: 12px 0px 12px 12px !important;
   border: solid 1px #a1deff;
   margin: 8px 0px 8px 16px !important;
+}
+
+.send-files {
+  line-height: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /*************************
