--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -123,6 +123,9 @@
   overflow: auto;
   flex-grow: 2;
   padding-bottom: 30vh;
+  @media all and (max-width: 375px) {
+    padding-bottom: 300px;
+  }
 }
 .post-form {
   padding: 8px;
@@ -314,6 +317,15 @@ $send-message-color: #D4F0FF;
 
   50% {
     opacity: 0.3;
+  }
+}
+
+.message-file{
+  a{
+    display: block;
+    img{
+      width: 100px;
+    }
   }
 }
 
