--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,6 +35,7 @@
   background-color: #f2f2f2;
   height: calc(100vh - 56px);
   width: 300px;
+  overflow: hidden auto;
 }
 
 .btn-991 {
@@ -119,12 +120,20 @@
 .chat-list-items a {
   text-decoration: none;
   color: #444;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin: 8px 0px;
   border: solid 1px #aaf;
   background-color: #eef;
   border-radius: 4px;
   padding: 0px 8px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .chat-active a {
@@ -449,15 +458,37 @@
   width: 100px;
 }
 
+.unread-point {
+  display: block;
+  background: #FF0000;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  line-height: 25px;
+  text-align: center;
+  color: #FFF;
+  font-size: .7rem;
+  font-weight: bold;
+}
+
 /*************************
 *  RightColmuns
 *************************/
+.side-menu-ttl {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #f2f2f2;
+  padding: 8px;
+  margin: 0;
+}
+
 .right-info {
   color: #888;
   margin: 8px;
   background-color: #fff;
   max-height: 250px;
-  overflow: auto;
+  overflow: hidden auto;
 }
 
 .right-info dl {
