--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -24,6 +24,7 @@
   background-color: #f2f2f2;
   height: calc(100vh - 56px);
   width: 300px;
+  overflow: hidden auto;
 }
 .btn-991 {
   display: none;
@@ -99,12 +100,14 @@
 .chat-list-items a {
   text-decoration: none;
   color: #444;
-  display: block;
+  display: flex;
   margin: 8px 0px;
   border: solid 1px #aaf;
   background-color: #eef;
   border-radius: 4px;
   padding: 0px 8px;
+  justify-content: space-between;
+  align-items: center;
 }
 .chat-active a {
   background-color: #fee;
@@ -329,15 +332,36 @@ $send-message-color: #D4F0FF;
   }
 }
 
+
+.unread-point{
+  display: block;
+  background: #FF0000;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  line-height: 25px;
+  text-align: center;
+  color: #FFF;
+  font-size: .7rem;
+  font-weight: bold;
+}
+
 /*************************
 *  RightColmuns
 *************************/
+.side-menu-ttl{
+  position: sticky;
+  top: 0;
+  background-color: #f2f2f2;
+  padding: 8px;
+  margin: 0;
+}
 .right-info {
   color: #888;
   margin: 8px;
   background-color: #fff;
   max-height: 250px;
-  overflow: auto;
+  overflow: hidden auto;
 }
 .right-info dl {
   padding: 8px;
