--- a/static/css/login.css
+++ b/static/css/login.css
@@ -7,8 +7,18 @@
   width: 300px;
 }
 
+.login-form .card-body {
+  background-color: #fcfcfc;
+}
+
 @supports (-webkit-touch-callout: none) {
   body, .login-wrap {
     height: -webkit-fill-available;
   }
+}
+
+.btn-original-blue {
+  color: #FFF;
+  background-color: #337ab7;
+  border-color: #2e6da4;
 }
