--- a/static/scss/login.scss
+++ b/static/scss/login.scss
@@ -6,6 +6,9 @@
 }
 .login-form{
   width: 300px;
+  .card-body{
+    background-color: #fcfcfc;
+  }
 }
 
 
@@ -13,4 +16,11 @@
   body, .login-wrap {
     height: -webkit-fill-available;
   }
+}
+
+
+.btn-original-blue{
+  color: #FFF;
+  background-color: #337ab7;
+  border-color: #2e6da4;
 }
