--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -375,11 +375,12 @@
 
 .chat-send-name {
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: .8rem;
   color: #007acc;
 }
 
 .chat-send-time {
+  font-size: .7rem;
   font-weight: bold;
   color: #777;
 }
@@ -485,7 +486,7 @@
   position: sticky;
   top: 0;
   background-color: #f2f2f2;
-  padding: 14px 8px 14px 8px;
+  padding: 8px;
   margin: 0;
   margin-bottom: 8px;
   -webkit-box-shadow: -1px 2px 5px rgba(0, 0, 0, 0.5);
