--- a/static/scss/login.scss
+++ b/static/scss/login.scss
@@ -23,4 +23,8 @@
   color: #FFF;
   background-color: #337ab7;
   border-color: #2e6da4;
+  &:hover{
+    color: #FFF;
+    font-weight: bold;
+  }
 }
