--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -269,10 +269,11 @@
 }
 .chat-send-name {
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: .8rem;
   color: #007acc;
 }
 .chat-send-time {
+  font-size: .7rem;
   font-weight: bold;
   color: #777;
 }
@@ -359,7 +360,7 @@ $send-message-color: #D4F0FF;
   position: sticky;
   top: 0;
   background-color: #f2f2f2;
-  padding: 14px 8px 14px 8px;
+  padding: 8px;
   margin: 0;
   margin-bottom: 8px;
   box-shadow: -1px 2px 5px rgba(0, 0, 0, 0.5);
