--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -561,7 +561,7 @@ $jobster-left-menu-bgcolor: #333;
   flex-wrap: wrap;
   .jobster-work-register-this, .jobster-work-register-next{
     width: 100%;
-    @media screen and (min-width: 1700px){
+    @media screen and (min-width: 2000px){
       width: 50%;
     }
   }
@@ -607,6 +607,7 @@ $jobster-left-menu-bgcolor: #333;
       }
       @media screen and (min-width: 1300px){
         display: flex;
+        margin-bottom: -2px;
         dl{
           display: block;
           width: calc(100% / 7);
@@ -615,18 +616,22 @@ $jobster-left-menu-bgcolor: #333;
             border-style: solid;
             border-width: 1px;
             text-align: center;
-            border-right: none;
           }
           dt{
             border-bottom: none;
+            width: 100%;
+            border-right: none;
           }
           dd{
             height: 60px;
             margin: 0;
+            width: 100%;
+            border-right: none;
           }
           .official-message{
             height: 30px;
             border-bottom: none;
+            border-left: solid 1px #CCC;
           }
           .work-register{
             width: 100%;
@@ -644,6 +649,12 @@ $jobster-left-menu-bgcolor: #333;
 }
 .background-disable{
   background-color: #EDEDED!important;
+}
+.background-saturday{
+  background-color: #58B2DC!important;
+}
+.background-sunday{
+  background-color:#F8C3CD!important;
 }
 
 /*************************
